# discord-acp-bridge

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  README.md  main.py  projects.json.example  pyproject.toml
.claude/: settings.local.json
.claude/agent-memory/python-code-reviewer/: MEMORY.md
.claude/agents/: python-code-reviewer.md
.claude/skills/implement/: SKILL.md
.local/: ADR.md  Design.md
docs/: ARCHITECTURE.md
src/discord_acp_bridge/: __init__.py  main.py
src/discord_acp_bridge/application/: __init__.py  models.py  project.py  session.py
src/discord_acp_bridge/infrastructure/: __init__.py  acp_client.py  config.py  logging.py
src/discord_acp_bridge/presentation/: __init__.py  bot.py
src/discord_acp_bridge/presentation/commands/: __init__.py  agent.py  project.py
src/discord_acp_bridge/presentation/events/: __init__.py  message.py
src/discord_acp_bridge/presentation/views/: __init__.py  permission.py
tests/: __init__.py  test_acp_client.py  test_auto_approve.py  test_config.py  test_logging.py  test_main.py  test_permission_view.py  test_project.py  test_session.py
tests/presentation/: test_message.py
